Finish API call, Display user movies